Fixed arrow image alignment in FAQ.

--- a/src/styles/FAQs/FAQs.scss
+++ b/src/styles/FAQs/FAQs.scss
@@ -104,6 +104,11 @@
         a {
           font-weight: 600;
           color: $tango;
+          img {
+            vertical-align: middle;
+            position: relative;
+            top: -1px;
+          }
         }
       }
     }
